Bug 121161 - Byte order of nvdimm fields read from ACPI NFIT table is reversed
Summary: Byte order of nvdimm fields read from ACPI NFIT table is reversed
Status: CLOSED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: NVDIMM (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: drivers_nvdimm
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-06-29 19:00 UTC by kristin.jacque
Modified: 2016-07-01 22:41 UTC (History)
2 users (show)

See Also:
Kernel Version: 4.7.0-0.rc4
Subsystem:
Regression: Yes
Bisected commit-id:


Attachments

Description kristin.jacque 2016-06-29 19:00:32 UTC
Issue is in drivers/acpi/nfit.c. The byte order of nvdimm fields read from the NFIT is the reverse of what is expected. For example, returning nvdimm format 0x103, when 0x301 is expected.
Comment 1 Dan Williams 2016-06-29 21:25:26 UTC
Fix available:

https://lists.01.org/pipermail/linux-nvdimm/2016-June/006207.html
Comment 2 Dan Williams 2016-07-01 22:41:28 UTC
Fix merged:

commit 1bcbf42d2732 nfit: fix format interface code byte order

Note You need to log in before you can comment on or make changes to this bug.